Sunday, February 10 2002, James Turner

	* Added wait for INFO(LOGOUT) response from server, 
	  and a timeout in case the server doesn't support that
	* Added a signal on Player when a logout completes
	* Added a comment in World.cpp about the TO field on
	  IG LOOK ops.
	* Added another 'foundation' dispatcher to Connection
	  (op:info:op)

Friday, Febuary 08 2002, Al Riddoch

	* Clear TO on IG Look ops.

Sunday, February 03 2002, James Turner

	* Fixed logout (set FROM)
	* Changed character API, let me know what you think.
	* Implemented TypeInfo::getParentsAsSet

Tuesday, January 29 2002, James Turner

	* Support for sending private chat messages (using a new
	  'msg' method on Person)
	* Root-entity handling fixes on World and Entity
	* Person now caches the Lobby it's bound too (should help
	  when we eventually have multiple connections)

Thursday, January 24 2002, James Turner

	* Supports skstream2, thanks to Michael Koch for the 
	  work. 

Sunday, January 20 2002, Al Riddoch

	* Add children accessor to TypeInfo node.

Friday, January 18 2002, James Turner

	* Move lots of extraneous public stuff in TypeInfo
	  private as it should have been all along. If this
	  breaks your client code, talk to me, since you
	  were maybe doing something unwise.
	* Added global BoundType signal on TypeInfo, to
	  inform clients about new types as they become
	  available. Suggested by Al Riddoch for Equator work.

Thursday, January 17 2002, James Turner

	* Further property tweaks suggested by Karsten.
	* Added observeProperty accessor to Entity, which allows
	  easy public monitoring of attribute values.
	* Fixed connectOp[To/From]Slot on Entity
	* Added getType() helper on Entity that returns the
	  corresponding TypeInfo*

Tuesday, January 15 2002, James Turner

	* Rewrote property handling completely : should be
	  much simpler (no unsync() / resync()) and much more
	  flexible now. Properties now have get and set signals
	  that can be observed for value changes.